[package]
name = "wallpaper"
version = "0.1.0"
edition = "2021"

# [dependencies.reqwest]
# version = "0.12"
# features = ["blocking"]


[dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging"] }

[profile]
dev = { debug = 0 }
release = { debug = 0 }
